# nodiView

./: .gitignore  INSTALL.md  LICENSE  QUICKSTART.md  README.md  org.noackdigital.nodiView.yml  pyproject.toml  requirements.txt  run.sh  setup.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/: nodiview.appdata.xml  nodiview.desktop
flatpak/: nodiview.json  nodiview.yml
nodiview/: __init__.py  __main__.py  i18n.py  image_viewer.py  main.py  optimization_dialog.py  settings.py  thumbnail_view.py  window.py
nodiview/batch/: __init__.py  batch_processor.py
nodiview/converter/: __init__.py  image_converter.py
nodiview/editor/: __init__.py  crop.py  flip.py  rotate.py
nodiview/optimizer/: __init__.py  gif_optimizer.py  jpeg_optimizer.py  png_optimizer.py  resize.py
nodiview/utils/: __init__.py  config.py  file_utils.py  image_utils.py
snap/: snapcraft.yaml
